samples/_failures_safe/1761449374_6aab93_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_283d8f9e.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_283d8f9e.c:151:13: error: expected declaration or statement at end of input
  151 |             printf("Vertex %d: %d\n", i, dist[i]);
      |             ^~~~~~
./samples/SAFE/__tmp_283d8f9e.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_283d8f9e.c:151:13: error: expected declaration or statement at end of input
